# openlgr

./: CMakeLists.txt  README.md  emulation.c  main.c  main.h  shaders.h  uc_kvm.c  windows.h
com/: d3d.c  d3d.h  ddraw.h  dinput.c
